# bricks-cli

./: .gitattributes  .gitignore  README.md  databricks.yml  dbt_project.yml  profile_template.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  skills-lock.json  zensical.toml
.github/workflows/: ci.yml  deploy.yml  docs.yml
dbt_profiles/: .user.yml  profiles.yml
docs/: 01-databricks-cli.md  02-authentication.md  03-asset-bundles.md  04-dbt-on-databricks.md  05-deploy-and-run.md  index.md
docs/explanation/: authentication.md  development-vs-production.md  evidence-lifecycle.md  how-dbt-connects.md  how-project-changes-appear-in-observability.md  index.md  native-observability.md  security-and-secrets.md  why-asset-bundles.md
docs/how-to/: add-a-model.md  change-the-deployed-selection.md  clean-up-development.md  configure-native-alerts.md  decommission-production-evidence.md  deploy-to-production.md  grant-operator-access.md  grant-production-prerequisites.md  grant-production-runtime-access.md  index.md  investigate-a-collector-failure.md  investigate-a-source-failure.md  observe-dbt-jobs.md  query-job-health.md  rotate-runtime-identities.md  rotate-the-deployer-secret.md  run-dbt-locally.md  set-up-m2m-cicd.md  set-up-oidc-cicd.md  verify-failure-capture.md  verify-production-deployment.md
docs/reference/: attempt-key.md  authentication-support.md  index.md  (+16 more)
resources/: dbt_observability_collector.job.yml  nyc_taxi.job.yml  observability.infrastructure.yml
tests/: test_collector_core.py  test_deploy_workflow_privacy.py  test_job_resources.py
(+21 files in other folders)
