[project]
name = "bricks-cli-observability"
version = "0.1.0"
requires-python = ">=3.10,<3.14"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["src", "src/observability"]
